@@ -1,387 +1,410 @@
-# NSPACE Portfolio Projekt - Detaillierter Technischer Bericht
+# NSPACE Portfolio Projekt — Detaillierter Technischer Bericht
 
 ## Projektübersicht
 
-Das NSPACE Portfolio Projekt ist eine moderne, vollständig containerisierte Webanwendung, die aus drei Hauptkomponenten besteht: einem Vue.js Frontend, einem Java Spring Boot Backend und einem Python FastAPI Backend. Das Projekt wurde entwickelt, um ein professionelles Portfolio mit SpaceX-inspiriertem Design zu präsentieren und gleichzeitig als Demonstrationsplattform für verschiedene Technologien zu dienen.
+Das NSPACE Portfolio Projekt ist eine modern aufgebaute, vollständig containerisierte Webanwendung, die aus drei eigenständigen Diensten besteht: einem Vue.js-Frontend, einem Java-Spring-Boot-Backend und einem Python-FastAPI-Backend. Die Anwendung dient als professionelles Portfolio mit interaktivem Terminbuchungssystem, rollenbasierter Administrationsoberfläche, einem Portfolio-CMS und einer KI-gestützten Textgenerierung über mehrere Anbieter hinweg.
+
+Technisch demonstriert das Projekt aktuelle Enterprise-Praktiken: stateless JWT-Authentifizierung, role-based access control (RBAC), das Factory-Entwurfsmuster für austauschbare KI-Provider, vollständiges Audit-Logging und eine datenbankgesteuerte Konfigurationsverwaltung.
+
+---
 
 ## Architektur und Systemdesign
 
 ### Gesamtarchitektur
 
-Das Projekt folgt einer Microservices-Architektur, bei der jeder Service in einem eigenen Docker-Container läuft. Die Kommunikation zwischen den Services erfolgt über ein internes Docker-Netzwerk, während das Frontend über NGINX als Reverse Proxy ausgeliefert wird. Diese Architektur ermöglicht es, jeden Service unabhängig zu entwickeln, zu testen und zu deployen.
+Das Projekt folgt einer Microservices-Architektur, bei der jeder Dienst in einem eigenen Docker-Container läuft. Die Kommunikation zwischen den Diensten erfolgt ausschließlich über definierte REST-Schnittstellen innerhalb eines privaten Docker-Netzwerks. Das Frontend wird über NGINX als statisches Asset ausgeliefert und kommuniziert per HTTP mit beiden Backends.
 
-**Code-Referenzen:**
-- Docker-Netzwerk-Konfiguration: `docker-compose.yml` (Zeilen 1-3: `networks: app-network`)
-- NGINX Reverse Proxy: `vue-frontend/nginx.conf` (Zeilen 12-20: API-Proxy-Konfiguration)
-- Service-Discovery: `docker-compose.yml` (Zeilen 19-20: Environment-Variablen für API-URLs)
+**Relevante Dateien:**
+- Netzwerk-Konfiguration: `docker-compose.yml`
+- NGINX Reverse-Proxy-Konfiguration: `vue-frontend/nginx.conf`
 
 ### Container-Orchestrierung
 
-Docker Compose dient als Orchestrierungstool für alle drei Services. Die docker-compose.yml Datei definiert die Services, deren Abhängigkeiten, Netzwerkkonfiguration und Port-Mappings. Das Frontend hängt von beiden Backend-Services ab, was sicherstellt, dass diese zuerst gestartet werden, bevor das Frontend initialisiert wird.
-
-**Code-Referenzen:**
-- Service-Definitionen: `docker-compose.yml` (Zeilen 6-21: vue-frontend Service)
-- Abhängigkeiten: `docker-compose.yml` (Zeilen 14-16: `depends_on` für Backend-Services)
-- Port-Mappings: `docker-compose.yml` (Zeilen 12-13: `"3000:80"` für Frontend)
+Docker Compose verwaltet alle vier Dienste: das Vue.js-Frontend, das Java-Backend, das Python-Backend und die PostgreSQL-Datenbank. Die `docker-compose.yml` definiert Abhängigkeiten, Portzuordnungen, Netzwerkkonfigurationen und Umgebungsvariablen. Das Frontend wartet auf die Verfügbarkeit beider Backend-Dienste, bevor es initialisiert wird.
 
 ### Netzwerkarchitektur
 
-Alle Container laufen im gleichen Docker-Netzwerk namens "app-network". Dies ermöglicht es den Services, sich über ihre Container-Namen als Hostnamen zu erreichen. Das Frontend kann beispielsweise das Java-Backend über "java-backend:8080" erreichen, während externe Clients über "localhost:8080" zugreifen.
+Alle Container sind dem Netzwerk `app-network` zugeordnet. Docker löst Containernamen automatisch als DNS-Hostnamen auf, sodass die Backends untereinander und mit der Datenbank über Namen wie `java-backend:8080` oder `postgres:5432` erreichbar sind. Externe Clients (Browser) greifen ausschließlich über die gemappten Ports des Hosts zu.
 
-**Code-Referenzen:**
-- Netzwerk-Definition: `docker-compose.yml` (Zeilen 1-3: `networks: app-network`)
-- Service-Netzwerk-Zuordnung: `docker-compose.yml` (Zeilen 17-18: `networks: - app-network`)
-- Interne Service-URLs: `docker-compose.yml` (Zeilen 19-20: `VITE_JAVA_API_URL=http://java-backend:8080`)
+**Port-Übersicht:**
 
-## Frontend-Implementierung (Vue.js)
+| Dienst | Interner Port | Externer Port (Host) |
+| :--- | :--- | :--- |
+| vue-frontend | 80 (NGINX) | 3000 |
+| java-backend | 8080 | 8080 |
+| python-backend | 8000 | 8000 |
+| postgres | 5432 | — (nur intern) |
+
+---
+
+## Datenbankarchitektur
+
+### Database-per-Service Pattern
+
+Obwohl alle Dienste dieselbe PostgreSQL-Instanz nutzen, besitzt jeder Dienst eine separate Datenbank mit eigenem Datenbankbenutzer. Das verhindert unbeabsichtigte Datenüberschneidungen zwischen den Diensten:
+
+```sql
+-- docker/init.sql — wird beim ersten Start automatisch ausgeführt
+CREATE USER java_user WITH PASSWORD 'java_password';
+CREATE USER python_user WITH PASSWORD 'python_password';
+CREATE DATABASE java_db OWNER java_user;
+CREATE DATABASE python_db OWNER python_user;
+```
+
+### Java-Datenbankschema (`java_db`)
+
+Das Java-Backend verwaltet alle Anwendungsdaten in der `java_db`. Spring Data JPA generiert das Schema automatisch aus den Entity-Klassen. Folgende Tabellen werden angelegt:
+
+| Tabelle | Entity-Klasse | Beschreibung |
+| :--- | :--- | :--- |
+| `app_users` | `User.java` | Benutzerverwaltung mit Passwort-Hash und Rolle |
+| `appointments` | `Appointment.java` | Terminbuchungen mit Status und Zeitfenster |
+| `portfolio_items` | `PortfolioItem.java` | Portfolio-Einträge (Titel, Beschreibung, Tags) |
+| `global_config` | `GlobalConfig.java` | Schlüssel-Wert-Paare für Laufzeitkonfiguration |
+
+### Python-Datenbankschema (`python_db`)
+
+Das Python-Backend führt ausschließlich Audit-Logs für KI-Anfragen. SQLModel (basierend auf SQLAlchemy) erstellt die Tabellen automatisch beim Start:
+
+| Tabelle | Modell-Klasse | Beschreibung |
+| :--- | :--- | :--- |
+| `ai_audit_logs` | `AuditLog` | Vollständiges Protokoll aller KI-Anfragen |
+
+---
+
+## Frontend-Implementierung (Vue.js 3)
 
 ### Technologie-Stack
 
-Das Frontend basiert auf Vue.js 3 mit der Composition API und verwendet Vite als Build-Tool. Vue Router 4 ermöglicht client-seitiges Routing für eine Single Page Application (SPA). NGINX dient als Web-Server für die Produktionsumgebung und behandelt das SPA-Routing durch Fallback-Konfiguration.
+Das Frontend basiert auf Vue.js 3 mit der Composition API und Vite als Build-Werkzeug. Vue Router 4 ermöglicht clientseitiges Routing, Pinia verwaltet den globalen Anwendungsstatus. NGINX dient in der Produktionsumgebung als Web-Server und behandelt SPA-Routing durch eine `try_files`-Direktive.
 
-**Code-Referenzen:**
-- Vue.js Dependencies: `vue-frontend/package.json` (Zeilen 16-17: `"vue": "^3.5.18"`, `"vue-router": "^4.5.1"`)
-- Vite-Konfiguration: `vue-frontend/vite.config.js` (Zeilen 8-18: Vue-Plugin und Alias-Konfiguration)
-- NGINX SPA-Fallback: `vue-frontend/nginx.conf` (Zeilen 8-10: `try_files $uri $uri/ /index.html`)
+**Abhängigkeiten:**
+- `vue-frontend/package.json` — Vue 3, Vue Router 4, Pinia, Vite
+- `vue-frontend/vite.config.js` — Build-Konfiguration mit `@`-Alias für `src/`
+- `vue-frontend/nginx.conf` — NGINX mit SPA-Fallback
 
 ### Komponentenstruktur
 
-Die Anwendung besteht aus einer Hauptkomponente (App.vue) und vier View-Komponenten. App.vue enthält die Navigation und den Router-View-Container. Die Navigation verwendet Vue Router für die Programmierung der Routenänderungen. Jede View-Komponente ist für einen spezifischen Bereich der Anwendung verantwortlich.
+```
+vue-frontend/src/
+├── main.js                  Anwendungseinstiegspunkt, Vue-App montieren
+├── router/index.js          Routen-Definitionen mit Auth-Guard
+├── stores/auth.js           Pinia Store für JWT-Token und Authentifizierungsstatus
+├── services/api.js          Zentraler API-Client für Java- und Python-Backend
+└── views/
+    ├── Home.vue             Startseite mit SpaceX-inspiriertem Hero-Design
+    ├── Profile.vue          Öffentliches Profil
+    ├── TermineJava.vue      Terminbuchungssystem mit interaktivem Kalender
+    ├── Portfolio.vue        Portfolio-Galerie
+    ├── Login.vue            Login-Formular
+    └── AdminDashboard.vue   Verwaltungsoberfläche (ROLE_ADMIN)
+```
 
-**Code-Referenzen:**
-- Hauptkomponente: `vue-frontend/src/App.vue` (Zeilen 2-16: Template mit Navigation und Router-View)
-- Router-Konfiguration: `vue-frontend/src/router/index.js` (Zeilen 7-12: Route-Definitionen)
-- Navigation-Buttons: `vue-frontend/src/App.vue` (Zeilen 7-10: `@click="$router.push('/')"` Buttons)
-- View-Komponenten: `vue-frontend/src/views/` (Home.vue, Profile.vue, TermineJava.vue, KiPython.vue)
+### State Management: Pinia Store (`stores/auth.js`)
 
-### Design-Implementierung
+Der Authentifizierungsstatus wird in einem Pinia Store verwaltet. Der JWT-Token wird im `localStorage` persistiert, damit die Sitzung bei einem Seitenneuladen erhalten bleibt. Zwei berechnete Eigenschaften (Getters) werten den Token-Payload aus:
 
-Das Design orientiert sich am SpaceX-Stil mit einem dunklen Hero-Bereich, animierten Sterneffekten und minimalistischer Navigation. Die Sterneffekte werden durch CSS-Animationen und radiale Gradienten erzeugt. Die Navigation verwendet Outline-Buttons mit Hover-Effekten, die dem modernen, technischen Look entsprechen.
+- `isAuthenticated` — prüft, ob ein Token vorhanden ist
+- `isAdmin` — dekodiert den JWT-Payload und vergleicht die Rolle mit `ROLE_ADMIN`
 
-**Code-Referenzen:**
-- SpaceX-Design: `vue-frontend/src/views/Home.vue` (Zeilen 28-169: CSS mit Sterneffekten und Hero-Layout)
-- Sterneffekt-Animation: `vue-frontend/src/views/Home.vue` (Zeilen 45-50: `@keyframes drift`)
-- Navigation-Styling: `vue-frontend/src/App.vue` (Zeilen 60-81: `.nav-btn` Hover-Effekte)
-- Hero-Backdrop: `vue-frontend/src/views/Home.vue` (Zeilen 32-44: Radiale Gradienten für Lichtkegel)
+### Route Guards (`router/index.js`)
 
-### Build-Prozess
+Ein `beforeEach`-Hook schützt alle Routen mit dem Meta-Flag `requiresAuth: true`. Nicht authentifizierte Nutzer werden automatisch zur Login-Seite umgeleitet.
 
-Vite kompiliert die Vue-Komponenten und Assets in statische Dateien, die in den dist-Ordner geschrieben werden. NGINX dient diese Dateien aus und behandelt das SPA-Routing durch eine try_files-Direktive, die alle nicht gefundenen Routen an index.html weiterleitet.
+### Zentraler API-Client (`services/api.js`)
 
-**Code-Referenzen:**
-- Vite Build-Konfiguration: `vue-frontend/vite.config.js` (Zeilen 8-18: Vue-Plugin und Alias-Setup)
-- Multi-Stage Dockerfile: `vue-frontend/Dockerfile` (Zeilen 1-7: Node.js Build-Stage)
-- NGINX Runtime: `vue-frontend/Dockerfile` (Zeilen 9-15: NGINX Runtime-Stage)
-- SPA-Routing: `vue-frontend/nginx.conf` (Zeilen 8-10: `try_files $uri $uri/ /index.html`)
+Alle HTTP-Anfragen laufen über ein einziges API-Serviceobjekt. Das verhindert verteilte URLs im Code und stellt sicher, dass der `Authorization: Bearer <token>`-Header bei allen authentifizierten Anfragen automatisch gesetzt wird.
 
-## Java Backend-Implementierung (Spring Boot)
+---
+
+## Java Backend-Implementierung (Spring Boot 3 / Java 21 LTS)
 
 ### Framework und Konfiguration
 
-Das Java-Backend verwendet Spring Boot 3.2.0 mit dem Web-Starter für REST-API-Funktionalität. Die Anwendung ist als einfache REST-API konfiguriert, ohne Datenbank-Abhängigkeiten, um die Komplexität zu reduzieren und den Fokus auf die Containerisierung zu legen.
+Das Java-Backend setzt auf Spring Boot 3.2.0, Spring Security 6, Spring Data JPA und PostgreSQL. Der Quellcode wird mit **Java 21 LTS** kompiliert (`--release 21`), das Docker-Image basiert auf `eclipse-temurin:21-jdk`.
 
-**Code-Referenzen:**
-- Spring Boot Dependencies: `java-backend/pom.xml` (Zeilen 23-27: `spring-boot-starter-web`)
-- Spring Boot Version: `java-backend/pom.xml` (Zeile 15: `spring.boot.version>3.2.0`)
-- JPA deaktiviert: `java-backend/pom.xml` (Zeilen 28-34: Auskommentierte JPA-Dependency)
+Folgende Maven-Abhängigkeiten sind im Einsatz:
 
-### Anwendungsstruktur
+| Abhängigkeit | Zweck |
+| :--- | :--- |
+| `spring-boot-starter-web` | REST-API mit eingebettetem Tomcat |
+| `spring-boot-starter-security` | Spring Security 6 |
+| `spring-boot-starter-data-jpa` | Spring Data JPA / Hibernate |
+| `postgresql` (JDBC) | Datenbankverbindung |
+| `jjwt-api`, `jjwt-impl`, `jjwt-jackson` | JWT-Generierung und -Validierung |
+| `lombok` | Boilerplate-Reduktion für Entitäten |
 
-Die Hauptklasse JavaBackendApplication.java dient sowohl als Spring Boot-Anwendungseinstiegspunkt als auch als REST-Controller. Sie definiert mehrere Endpoints: einen Root-Endpoint für den Service-Status, einen Health-Check-Endpoint und einen API-Endpoint für Termine.
+**Java-Version im Build:**
+```xml
+<!-- java-backend/pom.xml -->
+<java.version>21</java.version>   <!-- Spring Boot Parent nutzt dies für --release 21 -->
+```
 
-**Code-Referenzen:**
-- Hauptklasse: `java-backend/src/main/java/com/nspace/JavaBackendApplication.java` (Zeilen 1-31)
-- Spring Boot App: `JavaBackendApplication.java` (Zeilen 10-12: `@SpringBootApplication` und `main`-Methode)
-- REST-Controller: `JavaBackendApplication.java` (Zeilen 9, 15-30: `@RestController` und `@GetMapping`-Endpoints)
-- API-Endpoints: `JavaBackendApplication.java` (Zeilen 15-30: `/`, `/health`, `/api/termine`)
+### Paketstruktur
 
-### Konfiguration
+```
+com.nspace/
+├── JavaBackendApplication.java     @SpringBootApplication — Einstiegspunkt
+├── config/
+│   └── SecurityConfig.java         Spring Security: URL-Regeln, JWT-Filter, CORS
+├── controller/
+│   ├── AuthController.java         POST /api/auth/login, /register, /admin/register
+│   ├── AppointmentController.java  GET/POST /api/termine, PUT /confirm, DELETE
+│   ├── PortfolioController.java    GET /api/portfolio, POST/DELETE /api/admin/portfolio
+│   └── AdminController.java        GET /api/admin/*, POST /api/admin/config
+├── service/
+│   ├── AuthService.java            Login, Registrierung, JWT-Ausgabe
+│   ├── AppointmentService.java     Terminvalidierung und Geschäftslogik
+│   ├── PortfolioService.java       Portfolio-CRUD
+│   └── ConfigService.java          Laufzeit-Konfiguration mit Default-Werten
+├── security/
+│   ├── JwtUtil.java                JWT-Generierung (HMAC-SHA256, 10h Gültigkeit)
+│   ├── JwtAuthenticationFilter.java OncePerRequestFilter: Token extrahieren & prüfen
+│   └── CustomUserDetailsService.java UserDetails-Laden aus DB, Rollen-Mapping
+├── model/
+│   ├── User.java                   @Entity: app_users-Tabelle
+│   ├── Appointment.java            @Entity: appointments-Tabelle
+│   ├── AppointmentStatus.java      Enum: PENDING / CONFIRMED / CANCELLED
+│   ├── PortfolioItem.java          @Entity: portfolio_items-Tabelle (Lombok)
+│   └── GlobalConfig.java           @Entity: global_config key-value Tabelle
+├── dto/
+│   ├── LoginRequest.java           record: username, password
+│   ├── LoginResponse.java          record: token, role
+│   ├── RegisterRequest.java        record: username, password
+│   ├── AppointmentRequest.java     record: startTime, customerName, note
+│   └── AppointmentResponse.java    record: id, startTime, endTime, status, ...
+└── repository/
+    ├── UserRepository.java         JpaRepository + findByUsername
+    ├── AppointmentRepository.java  JpaRepository + existsByStartTime
+    ├── PortfolioRepository.java    JpaRepository
+    └── ConfigRepository.java       JpaRepository + findByKey
+```
 
-Die application.properties-Datei konfiguriert den Server-Port (8080), das aktive Profil (docker) und CORS-Einstellungen. CORS ist so konfiguriert, dass das Frontend und andere Services auf die API zugreifen können.
+### Schichten-Architektur
 
-**Code-Referenzen:**
-- Spring Boot Konfiguration: `java-backend/src/main/resources/application.properties` (Zeilen 1-10)
-- Server-Port: `application.properties` (Zeile 1: `server.port=8080`)
-- Docker-Profil: `application.properties` (Zeile 3: `spring.profiles.active=docker`)
-- CORS-Konfiguration: `application.properties` (Zeilen 5-9: CORS-Origins und -Methoden)
+Das Java-Backend folgt konsequent dem Layered-Architecture-Muster:
 
-### Containerisierung
+1. **Controller** — Empfängt HTTP-Anfragen, validiert grob, delegiert an Service
+2. **Service** — Enthält die gesamte Geschäftslogik und Validierungsregeln
+3. **Repository** — Datenbankzugriff über Spring Data JPA (kein handgeschriebenes SQL)
+4. **Model / Entity** — Abbildung der Datenbankstruktur auf Java-Klassen
 
-Das Java-Backend wird in einem Multi-Stage-Docker-Build kompiliert. Maven baut die Anwendung und erstellt ein ausführbares JAR-File. Der Container verwendet OpenJDK 17 und führt das JAR-File mit dem java-Befehl aus.
+### DTOs als Java Records
 
-**Code-Referenzen:**
-- Dockerfile: `java-backend/Dockerfile` (Zeilen 1-21)
-- Base-Image: `Dockerfile` (Zeile 2: `FROM openjdk:17-jdk-slim`)
-- Maven Build: `Dockerfile` (Zeilen 10-15: Maven-Installation und Build-Prozess)
-- JAR-Execution: `Dockerfile` (Zeile 20: `CMD ["sh", "-c", "java -jar target/*.jar"]`)
+Alle Transferobjekte sind als **Java Records** implementiert (Java 16+, in Java 21 LTS vollständig stabilisiert). Records sind unveränderlich, benötigen keinen Boilerplate-Code und eignen sich ideal für Datencontainer:
+
+```java
+// Kompakte, unveränderliche DTO-Definition
+public record AppointmentRequest(
+    LocalDateTime startTime,
+    String customerName,
+    String note
+) {}
+```
+
+### Geschäftslogik: Terminvalidierung (`AppointmentService.java`)
+
+Der `AppointmentService` setzt folgende Buchungsregeln durch:
+
+| Regel | Implementierung |
+| :--- | :--- |
+| Kein vergangener Termin | `startTime.isBefore(LocalDateTime.now())` |
+| Buchungsfenster (dynamisch) | `configService.getInt("booking_window_months", 3)` |
+| Nur Werktage | `DayOfWeek != SATURDAY && != SUNDAY` |
+| Öffnungszeiten 10–15 Uhr | `LocalTime.of(10,0)` bis `LocalTime.of(15,0)` |
+| Keine Doppeltbuchung | `repository.existsByStartTime(startTime)` |
+
+Der Buchungszeitraum wird nicht hart kodiert, sondern aus der `global_config`-Tabelle gelesen. Admins können ihn zur Laufzeit über das Dashboard ändern.
+
+### Sicherheitskonzept
+
+**Authentifizierung:** Passwörter werden mit BCrypt gehasht gespeichert. Beim Login prüft der `AuthenticationManager` den Hash und gibt bei Erfolg einen JWT aus.
+
+**JWT-Details:**
+- Algorithmus: HMAC-SHA256
+- Gültigkeitsdauer: 10 Stunden
+- Nutzdaten: `subject` (Benutzername), `role`-Claim (z.B. `ROLE_ADMIN`)
+
+**Autorisierung:** Spring Security wertet die Rolle im JWT bei jedem Request aus. Die `SecurityConfig` definiert die URL-basierten Zugriffsregeln:
+
+```
+GET  /api/auth/**           → öffentlich
+GET  /api/portfolio         → öffentlich
+GET  /api/termine           → öffentlich
+GET  /api/termine/config    → öffentlich
+PUT  /api/termine/*/confirm → ROLE_ADMIN
+DELETE /api/termine/**      → ROLE_ADMIN
+/api/admin/**               → ROLE_ADMIN
+*                           → authentifiziert
+```
+
+### Unit-Tests (`AppointmentServiceTest.java`)
+
+Das Projekt enthält JUnit 5 / Mockito-Tests für den Service-Layer:
+- `getAllAppointments_ShouldReturnList` — prüft korrekte Listenrückgabe
+- `createAppointment_ShouldSaveAndReturnResponse` — prüft das Speichern und die Response
+
+Ausführung: `mvn clean test` → BUILD SUCCESS | 2/2 Tests bestanden | kompiliert mit `release 21`
+
+---
 
 ## Python Backend-Implementierung (FastAPI)
 
-### Framework und Features
+### Framework und Abhängigkeiten
 
-Das Python-Backend verwendet FastAPI 0.104.1, ein modernes, schnelles Web-Framework für APIs. FastAPI bietet automatische API-Dokumentation, Typ-Validierung durch Pydantic und asynchrone Unterstützung.
+Das Python-Backend setzt auf FastAPI mit Uvicorn als ASGI-Server. SQLModel (SQLAlchemy + Pydantic) verwaltet die Datenbankanbindung. Das Docker-Image basiert auf `python:3.11-slim`.
 
-**Code-Referenzen:**
-- FastAPI Dependencies: `python-backend/requirements.txt` (Zeilen 1-7)
-- FastAPI Version: `requirements.txt` (Zeile 1: `fastapi==0.104.1`)
-- Uvicorn Server: `requirements.txt` (Zeile 2: `uvicorn[standard]==0.24.0`)
-- Pydantic Models: `requirements.txt` (Zeile 3: `pydantic==2.5.0`)
+### Paketstruktur
 
-### API-Struktur
+```
+python-backend/src/
+├── main.py                      FastAPI-App, CORS-Middleware, Router-Registrierung
+├── config.py                    Einstellungen über Pydantic BaseSettings / .env
+├── database.py                  SQLModel Engine und Session-Factory
+├── prompts.py                   System-Prompt-Templates für KI-Anfragen
+├── utils.py                     Hilfsfunktionen
+├── models/
+│   ├── dtos.py                  Pydantic-Modelle: InferRequest, InferResponse, ...
+│   └── audit.py                 SQLModel-Tabelle ai_audit_logs
+└── services/
+    ├── ai_provider.py           Abstrakte AIProvider-Klasse + alle Implementierungen
+    ├── provider_factory.py      Factory mit Singleton-Cache und MockProvider-Fallback
+    ├── ai_service.py            Orchestrierung: Provider aufrufen, Latenz messen, loggen
+    └── audit_service.py         Datenbankzugriff für Audit-Logging
+└── routers/
+    └── ai_router.py             FastAPI-Router: GET /info, POST /infer, POST /generate-ideas
+```
 
-Die main.py-Datei definiert die FastAPI-Anwendung mit CORS-Middleware für Cross-Origin-Requests. Die API enthält Endpoints für den Service-Status, Health-Checks und KI-Projekt-Management. Pydantic-Modelle definieren die Datenstrukturen für API-Requests und -Responses.
+### Multi-Provider-Architektur
 
-**Code-Referenzen:**
-- FastAPI App: `python-backend/main.py` (Zeilen 1-71)
-- CORS-Middleware: `main.py` (Zeilen 12-19: `CORSMiddleware` Konfiguration)
-- Pydantic Models: `main.py` (Zeilen 8-11: `KIProject` und `KIResponse` Models)
-- API-Endpoints: `main.py` (Zeilen 25-71: `/`, `/health`, `/api/ki/projects`)
+Das Kernstück des Python-Backends ist das **Factory Pattern** mit **Polymorphismus**:
 
-### Datenmodellierung
+```python
+# services/ai_provider.py — Gemeinsamer Vertrag für alle Provider
+class AIProvider(ABC):
+    @abstractmethod
+    def generate(self, prompt: str) -> str:
+        pass
+```
 
-Das Backend verwendet Pydantic-Modelle für die Typisierung und Validierung von API-Daten. Das KIProject-Model definiert die Struktur für KI-Projekte mit Feldern für ID, Name, Beschreibung, Status und Technologie.
+Alle vier Provider implementieren diese Schnittstelle:
 
-**Code-Referenzen:**
-- Pydantic Models: `python-backend/main.py` (Zeilen 8-11: `KIProject` und `KIResponse` Models)
-- KIProject Model: `main.py` (Zeilen 8-11: Felder für ID, Name, Description, Status, Technology)
-- Sample Data: `main.py` (Zeilen 15-20: Beispiel-KI-Projekte)
+| Klasse | Provider-Name | Basis |
+| :--- | :--- | :--- |
+| `OpenAIProvider` | `openai` | Direkt OpenAI API |
+| `DeepSeekProvider` | `deepseek` | Erbt von `OpenAICompatibleProvider` |
+| `OllamaProvider` | `ollama` | Lokaler Ollama-Server |
+| `MockProvider` | `mock` | Feste Testantworten, kein API-Key nötig |
 
-### Containerisierung
+Die `ProviderFactory` cached Instanzen und fällt bei fehlendem API-Key auf den `MockProvider` zurück.
 
-Der Python-Container basiert auf Python 3.11-slim und installiert die Dependencies aus requirements.txt. Uvicorn dient als ASGI-Server und läuft auf Port 8000.
+### Audit Logging
 
-**Code-Referenzen:**
-- Dockerfile: `python-backend/Dockerfile` (Zeilen 1-23)
-- Base-Image: `Dockerfile` (Zeile 2: `FROM python:3.11-slim`)
-- Dependencies: `Dockerfile` (Zeilen 8-9: `COPY requirements.txt` und `pip install`)
-- Uvicorn Server: `Dockerfile` (Zeile 22: `CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]`)
+Jede KI-Anfrage wird in `ai_audit_logs` protokolliert:
+- Provider, Prompt-Vorschau, Antwort-Vorschau, Latenz in ms, Zeitstempel
 
-## Docker-Implementierung
+Die Latenz wird über `perf_counter()` gemessen — direkt im `AIService` vor und nach dem Provider-Aufruf. Das ermöglicht präzise Provider-Vergleiche.
 
-### Multi-Stage Builds
+### API-Endpunkte
 
-Das Frontend verwendet einen Multi-Stage-Docker-Build: Der erste Stage kompiliert die Vue.js-Anwendung mit Node.js, der zweite Stage erstellt ein NGINX-Image mit den kompilierten Assets.
+| Methode | Pfad | Beschreibung |
+| :--- | :--- | :--- |
+| `GET` | `/api/ki/info` | Aktiver Provider, verfügbare Provider |
+| `POST` | `/api/ki/infer` | Freie Textgenerierung mit wählbarem Provider |
+| `POST` | `/api/ki/generate-ideas` | Strukturierte Ideen-Generierung |
 
-**Code-Referenzen:**
-- Multi-Stage Dockerfile: `vue-frontend/Dockerfile` (Zeilen 1-15)
-- Build-Stage: `Dockerfile` (Zeilen 1-7: Node.js Build mit `npm run build`)
-- Runtime-Stage: `Dockerfile` (Zeilen 9-15: NGINX mit kompilierten Assets)
-- Asset-Copy: `Dockerfile` (Zeile 14: `COPY --from=build /app/dist /usr/share/nginx/html`)
+---
 
-### Container-Konfiguration
+## Docker-Build-Strategie
 
-Jeder Service hat sein eigenes Dockerfile, das spezifisch für die jeweilige Technologie optimiert ist. Die Container sind so konfiguriert, dass sie minimal und sicher sind, mit nur den notwendigen Dependencies.
+### Multi-Stage Build (Frontend)
 
-**Code-Referenzen:**
-- Frontend Dockerfile: `vue-frontend/Dockerfile` (Multi-Stage Build)
-- Java Dockerfile: `java-backend/Dockerfile` (Maven Build + JAR Execution)
-- Python Dockerfile: `python-backend/Dockerfile` (Python Dependencies + Uvicorn)
-- Minimale Base-Images: Alle Dockerfiles verwenden `-alpine` oder `-slim` Varianten
+Das Vue.js-Frontend nutzt einen zweistufigen Docker-Build:
+1. **Build-Stage** (`node:20-slim`): `npm run build` — erzeugt den `dist/`-Ordner
+2. **Runtime-Stage** (`nginx:alpine`): NGINX liefert die statischen Assets aus
 
-### Netzwerk-Isolation
+Das finale Image enthält kein Node.js und keine Build-Werkzeuge — nur NGINX und die kompilierten Dateien.
 
-Docker Compose erstellt ein isoliertes Netzwerk für die Services. Dies verhindert externe Zugriffe auf die Backend-Services, während das Frontend über den konfigurierten Port erreichbar bleibt.
+### Java Backend
 
-**Code-Referenzen:**
-- Netzwerk-Isolation: `docker-compose.yml` (Zeilen 1-3: `networks: app-network`)
-- Service-Netzwerk: `docker-compose.yml` (Zeilen 17-18: `networks: - app-network`)
-- Port-Mapping: `docker-compose.yml` (Zeilen 12-13: Frontend `"3000:80"`, Backend-Services nur intern)
+Das Java-Backend nutzt `eclipse-temurin:21-jdk` als Basis. Maven wird im Container installiert, das Projekt gebaut und Maven anschließend wieder entfernt, um die Image-Größe zu minimieren:
 
-## Entwicklungsworkflow
+```dockerfile
+FROM eclipse-temurin:21-jdk
+RUN apt-get update && apt-get install -y maven && \
+    mvn -B clean package && \
+    apt-get remove -y maven && apt-get autoremove -y
+CMD ["sh", "-c", "java -jar target/*.jar"]
+```
 
-### Lokale Entwicklung
+### Python Backend
 
-Entwickler können jeden Service lokal ausführen, ohne Docker zu verwenden. Das Frontend läuft mit Vite's Entwicklungsserver, das Java-Backend mit Maven's Spring Boot-Plugin und das Python-Backend mit Uvicorn's Reload-Modus.
+Das Python-Backend basiert auf `python:3.11-slim`. Die `requirements.txt` wird separat von der Quelldatei kopiert, damit Docker den Abhängigkeits-Layer cachen kann und nicht bei jeder Code-Änderung neu installiert.
 
-**Code-Referenzen:**
-- Frontend Dev-Server: `vue-frontend/package.json` (Zeile 10: `"dev": "vite"`)
-- Java Dev-Server: `java-backend/pom.xml` (Zeilen 39-47: Spring Boot Maven Plugin)
-- Python Dev-Server: `python-backend/main.py` (Zeile 70: `uvicorn.run` mit Reload)
-- Start-Skripte: `start-frontend.sh`, `start-frontend.ps1` für lokale Entwicklung
+---
 
-### Container-basierte Entwicklung
+## Sicherheitsarchitektur (Zusammenfassung)
 
-Für die Produktionsumgebung oder das Testen der vollständigen Anwendung werden alle Services in Docker-Containern ausgeführt. Dies gewährleistet Konsistenz zwischen Entwicklung und Produktion.
+| Mechanismus | Implementierung |
+| :--- | :--- |
+| Passwort-Hashing | BCrypt (Spring Security DefaultPasswordEncoder) |
+| Token-Format | JWT (HMAC-SHA256, 10h Gültigkeit) |
+| Sitzungsstrategie | Stateless — kein Server-State, kein Session-Store |
+| Rollen | `ROLE_USER`, `ROLE_ADMIN` — im JWT-Payload kodiert |
+| Zugriffskontrolle | URL-basierte Regeln in `SecurityConfig`, HTTP-Methoden-granular |
+| CORS | Explizit erlaubte Origins in `SecurityConfig` und FastAPI `CORSMiddleware` |
+| CSRF | Deaktiviert — nicht benötigt bei Bearer-Token-Auth ohne Cookies |
+| Netzwerk | Backend-Services ohne externe Ports — nur internes Docker-Netzwerk |
 
-**Code-Referenzen:**
-- Docker Compose: `docker-compose.yml` (Vollständige Service-Orchestrierung)
-- Container-Build: `docker-compose.yml` (Zeilen 7-10: `build` Konfiguration für jeden Service)
-- Start-Skripte: `start-all.sh`, `start-all.ps1` für Container-basierte Entwicklung
+---
 
-### Build-Automatisierung
+## Entwicklung & Tests
 
-Start-Skripte automatisieren den Entwicklungsprozess. Bash- und PowerShell-Skripte sind verfügbar für verschiedene Betriebssysteme und ermöglichen es, einzelne Services oder die gesamte Anwendung zu starten.
+### Lokale Entwicklung ohne Docker
 
-**Code-Referenzen:**
-- Frontend Start-Skripte: `start-frontend.sh`, `start-frontend.ps1`
-- Full-Stack Start-Skripte: `start-all.sh`, `start-all.ps1`
-- Skript-Funktionalität: Automatische Dependency-Installation und Service-Start
+Alle drei Dienste können unabhängig ohne Docker gestartet werden:
 
-## Sicherheitsaspekte
+```bash
+# Java Backend
+cd java-backend && mvn spring-boot:run
 
-### Container-Sicherheit
+# Python Backend
+cd python-backend && uvicorn src.main:app --reload --port 8000
 
-Die Container verwenden minimale Base-Images (Alpine Linux, slim-Varianten) und enthalten nur die notwendigen Dependencies. Dies reduziert die Angriffsfläche und die Größe der Images.
+# Vue Frontend
+cd vue-frontend && npm run dev
+```
 
-**Code-Referenzen:**
-- Minimale Base-Images: 
-  - `vue-frontend/Dockerfile` (Zeile 10: `FROM nginx:alpine`)
-  - `java-backend/Dockerfile` (Zeile 2: `FROM openjdk:17-jdk-slim`)
-  - `python-backend/Dockerfile` (Zeile 2: `FROM python:3.11-slim`)
+### Mit Docker Compose
 
-### Netzwerk-Sicherheit
+```bash
+docker compose up --build
+```
 
-Die Backend-Services sind nicht direkt von außen erreichbar, sondern nur über das interne Docker-Netzwerk. Das Frontend fungiert als einziger öffentlicher Zugangspunkt.
+Alle Dienste starten geordnet (Postgres → Backends → Frontend).
 
-**Code-Referenzen:**
-- Netzwerk-Isolation: `docker-compose.yml` (Zeilen 1-3: `networks: app-network`)
-- Backend-Ports: `docker-compose.yml` (Zeilen 28-29, 42-43: Nur interne Ports, keine externen Mappings)
-- Frontend-Port: `docker-compose.yml` (Zeilen 12-13: `"3000:80"` - einziger externer Zugang)
+### Tests
 
-### CORS-Konfiguration
+```bash
+cd java-backend && mvn clean test
+# Ergebnis: BUILD SUCCESS | Tests run: 2 | Failures: 0 | Errors: 0
+# Compiler: debug release 21
+```
 
-CORS ist so konfiguriert, dass nur autorisierte Origins auf die APIs zugreifen können. Dies verhindert Cross-Site-Request-Forgery-Angriffe.
+---
 
-**Code-Referenzen:**
-- Java CORS: `java-backend/src/main/resources/application.properties` (Zeilen 5-9: CORS-Origins und -Methoden)
-- Python CORS: `python-backend/main.py` (Zeilen 12-19: `CORSMiddleware` Konfiguration)
-- Erlaubte Origins: `application.properties` (Zeile 5: `http://localhost:3000,http://vue-frontend`)
+## Bekannte Eigenheiten und gelöste Probleme
 
-## Performance-Optimierungen
+| Problem | Ursache | Lösung |
+| :--- | :--- | :--- |
+| Spring Boot kompilierte mit `release 17` statt `release 21` | Spring Boot Parent POM nutzt `${java.version}` für `--release`, nicht `maven.compiler.source` | `<java.version>21</java.version>` in `pom.xml` |
+| Java 21 Warnungen im Test (Mockito/ByteBuddy) | Dynamisches Agent-Loading ohne explizite Erlaubnis | `maven-surefire-plugin` mit `-XX:+EnableDynamicAgentLoading` |
+| Admin konnte sich einloggen, aber keine Admin-Aktionen ausführen | JWT enthielt Rolle, aber `CustomUserDetailsService` mappte sie nicht als Spring Authority | `new SimpleGrantedAuthority(user.getRole())` |
 
-### Frontend-Optimierungen
-
-Vite verwendet ESBuild für schnelle Kompilierung und Hot Module Replacement für sofortiges Feedback während der Entwicklung. Die Produktions-Builds sind optimiert und minimiert.
-
-**Code-Referenzen:**
-- Vite-Konfiguration: `vue-frontend/vite.config.js` (Zeilen 8-18: Vue-Plugin und Alias-Setup)
-- Build-Scripts: `vue-frontend/package.json` (Zeilen 10-12: `dev`, `build`, `preview` Scripts)
-- Multi-Stage Build: `vue-frontend/Dockerfile` (Zeilen 1-7: Optimierter Build-Prozess)
-
-### Backend-Optimierungen
-
-Spring Boot verwendet eingebetteten Tomcat für optimale Performance. FastAPI nutzt asynchrone Verarbeitung und ist für hohe Performance optimiert.
-
-**Code-Referenzen:**
-- Spring Boot Performance: `java-backend/pom.xml` (Zeilen 23-27: `spring-boot-starter-web` mit eingebettetem Tomcat)
-- FastAPI Performance: `python-backend/main.py` (Zeilen 25-71: Async-Endpoints mit `async def`)
-- Uvicorn ASGI: `python-backend/requirements.txt` (Zeile 2: `uvicorn[standard]==0.24.0`)
-
-### Container-Optimierungen
-
-Multi-Stage-Builds reduzieren die Größe der finalen Images. Layer-Caching wird durch optimale Dockerfile-Struktur maximiert.
-
-**Code-Referenzen:**
-- Multi-Stage Build: `vue-frontend/Dockerfile` (Zeilen 1-15: Build-Stage + Runtime-Stage)
-- Layer-Optimierung: Alle Dockerfiles kopieren Dependencies vor Source-Code für besseres Caching
-- Minimale Images: Alpine/slim Base-Images reduzieren Image-Größe
-
-## Monitoring und Logging
-
-### Container-Logging
-
-Docker Compose sammelt Logs von allen Services. Diese können mit docker-compose logs abgerufen werden, um Probleme zu diagnostizieren.
-
-### Health-Checks
-
-Beide Backend-Services implementieren Health-Check-Endpoints, die den Status der Services überwachen können.
-
-**Code-Referenzen:**
-- Java Health-Check: `java-backend/src/main/java/com/nspace/JavaBackendApplication.java` (Zeilen 22-25: `/health` Endpoint)
-- Python Health-Check: `python-backend/main.py` (Zeilen 30-33: `/health` Endpoint)
-- Service-Status: Beide Services haben `/` Root-Endpoints für Status-Überwachung
-
-### Debugging
-
-Entwickler können in Container einsteigen, um Probleme zu debuggen. Docker Compose exec ermöglicht es, Shell-Zugang zu laufenden Containern zu erhalten.
-
-## Deployment-Strategien
-
-### Lokales Deployment
-
-Das Projekt kann lokal mit Docker Compose deployed werden. Dies ist ideal für Entwicklung und Testing.
-
-### Produktions-Deployment
-
-Für die Produktion können die Container auf einem Docker-Host oder in einer Container-Orchestrierungsplattform wie Kubernetes deployed werden.
-
-### CI/CD-Integration
-
-Die Container-basierte Architektur ermöglicht einfache CI/CD-Integration. Jeder Service kann unabhängig gebaut und deployed werden.
-
-## Wartbarkeit und Erweiterbarkeit
-
-### Modulare Architektur
-
-Die Trennung der Services ermöglicht es, jeden Teil der Anwendung unabhängig zu entwickeln und zu warten. Neue Features können zu einzelnen Services hinzugefügt werden, ohne andere zu beeinträchtigen.
-
-### Konfigurationsmanagement
-
-Konfigurationen sind in separaten Dateien gespeichert und können für verschiedene Umgebungen angepasst werden.
-
-### Dokumentation
-
-Umfassende Dokumentation in der README.md und detaillierte Kommentare im Code erleichtern die Wartung und Erweiterung des Projekts.
-
-## Technische Herausforderungen und Lösungen
-
-### SPA-Routing in Containern
-
-Das Problem des client-seitigen Routings in einer containerisierten Umgebung wurde durch NGINX-Konfiguration gelöst, die alle Routen an die index.html weiterleitet.
-
-**Code-Referenzen:**
-- SPA-Routing: `vue-frontend/nginx.conf` (Zeilen 8-10: `try_files $uri $uri/ /index.html`)
-- NGINX-Konfiguration: `vue-frontend/Dockerfile` (Zeile 13: `COPY nginx.conf /etc/nginx/conf.d/default.conf`)
-
-### Service-Discovery
-
-Die Kommunikation zwischen Services wurde durch Docker's integrierte DNS-Auflösung gelöst, die Container-Namen in IP-Adressen auflöst.
-
-**Code-Referenzen:**
-- Service-Discovery: `docker-compose.yml` (Zeilen 19-20: `VITE_JAVA_API_URL=http://java-backend:8080`)
-- Container-Namen: `docker-compose.yml` (Zeilen 11, 25, 40: `container_name` für jeden Service)
-- Netzwerk-Konfiguration: `docker-compose.yml` (Zeilen 1-3: `networks: app-network`)
-
-### CORS-Konfiguration
-
-Cross-Origin-Requests wurden durch sorgfältige CORS-Konfiguration in beiden Backend-Services gelöst.
-
-**Code-Referenzen:**
-- Java CORS: `java-backend/src/main/resources/application.properties` (Zeilen 5-9: CORS-Konfiguration)
-- Python CORS: `python-backend/main.py` (Zeilen 12-19: `CORSMiddleware` Setup)
-- Erlaubte Origins: Beide Services erlauben `http://localhost:3000` und `http://vue-frontend`
-
-### Build-Optimierung
-
-Die Build-Zeit wurde durch optimale Dockerfile-Struktur und Layer-Caching reduziert.
-
-**Code-Referenzen:**
-- Layer-Caching: Alle Dockerfiles kopieren Dependencies vor Source-Code
-- Multi-Stage Build: `vue-frontend/Dockerfile` (Zeilen 1-15: Optimierte Build-Struktur)
-- Dependency-Installation: `vue-frontend/Dockerfile` (Zeilen 3-4: `COPY package*.json` vor `COPY . .`)
-
-## Zukünftige Entwicklungsmöglichkeiten
-
-### Datenbank-Integration
-
-Das Projekt kann um Datenbank-Services erweitert werden. PostgreSQL oder MySQL könnten als separate Container hinzugefügt werden.
-
-### Authentication und Authorization
-
-Ein Authentication-Service könnte implementiert werden, um Benutzer-Management und sichere API-Zugriffe zu ermöglichen.
-
-### Monitoring und Observability
-
-Tools wie Prometheus und Grafana könnten für erweiterte Überwachung und Metriken-Sammlung integriert werden.
-
-### Microservices-Erweiterung
-
-Weitere Services könnten hinzugefügt werden, um die Funktionalität zu erweitern, wie z.B. ein Notification-Service oder ein File-Upload-Service.
+---
 
 ## Fazit
 
-Das NSPACE Portfolio Projekt demonstriert eine moderne, skalierbare Webanwendungsarchitektur mit containerisierten Microservices. Die Verwendung von Vue.js, Spring Boot und FastAPI zeigt die Flexibilität und Stärke verschiedener Technologien in einer integrierten Lösung. Die Docker-basierte Architektur ermöglicht einfache Entwicklung, Testing und Deployment, während die modulare Struktur zukünftige Erweiterungen und Wartung erleichtert.
+Das NSPACE Portfolio Projekt demonstriert eine vollständige, produktionsnahe Webanwendungsarchitektur. Vom containerisierten Datenbankschema über typsichere Java Records und stateless JWT-Authentifizierung bis hin zum austauschbaren KI-Provider-System mit Audit-Logging — alle Schichten des Systems sind bewusst und nach anerkannten Software-Engineering-Prinzipien gestaltet.
 
-Das Projekt dient sowohl als funktionierendes Portfolio als auch als Demonstrationsplattform für moderne Webentwicklungspraktiken. Die umfassende Dokumentation und die gut strukturierte Codebase machen es zu einem wertvollen Referenzprojekt für ähnliche Anwendungen.
-
-Die Implementierung zeigt bewährte Praktiken in der Webentwicklung, einschließlich responsivem Design, RESTful APIs, Containerisierung und modernen Frontend-Frameworks. Die Architektur ist so gestaltet, dass sie sowohl für kleine Projekte als auch für größere, skalierbare Anwendungen geeignet ist.
+Die Kombination aus Java 21 LTS und Spring Boot 3 auf der einen Seite sowie Python FastAPI mit dem Factory-Pattern auf der anderen ist ein Paradebeispiel für den Best-of-Breed-Ansatz: jede Sprache und jedes Framework dort eingesetzt, wo ihre Stärken liegen.
